--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -18,9 +18,10 @@
       <%end%>
     </div>
     <div class="col-sm-3 center">
-      <button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-thumbs-up"></span>
+      <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-thumbs-up"></span>
         <%= @idea.likes.length %>
       </button>
+      <div class="fb-share-button" data-href="<%= request.url%>" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Jaa</a></div>
     </div>
   </div>
 
