--- a/app/views/layouts/_list_ideas.html.erb
+++ b/app/views/layouts/_list_ideas.html.erb
@@ -39,6 +39,9 @@
                     </button>
                     <ul class="dropdown-menu" role="menu">
                       <li>
+                        <%= link_to "Publish and Moderate", publish_moderate_idea_path(idea), method: :post%>
+                      </li>
+                      <li>
                         <%= link_to "Reject", reject_idea_path(idea), method: :post%>
                       </li>
                     </ul>
