Publish and unpublish buttons for comment

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -57,4 +57,12 @@ a .flag{
 
 .delete_comment{
 	float:right;
+	margin-left:10px;
+	margin-right:10px;
+}
+
+.publish_comment{
+	float:right;
+	margin-left:10px;
+	margin-right:10px;
 }
