--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -69,6 +69,7 @@
     Comments:
   </h3>
  <% @idea.comments.each do |comment| %>
+	 <% if (comment.visible? or (not current_user.nil? and current_user.moderator?)) %>
                   <ul class="list-group">
                     <li class="list-group-item">
                       <div class="panel panel-default">
@@ -94,6 +95,7 @@
                         </div>
                       </div>
                     </li>
+	    <% end %>
                   <% end %>
 
   <% if not session[:user_id].nil? %>
