--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,10 +19,18 @@
 	      </li>
 	    </ul>
       <ul class='nav navbar-nav navbar-right'>
-        <li><%= t :greeting %></li> <!-- TESTIKENTTÄ LOKALISAATIOTA VARTEN -->
-        <li><%= link_to_unless I18n.locale == :en, "English", language_english_path %></li>
-        <li><%= link_to_unless I18n.locale == :fin, "Finnish", language_finnish_path %></li>
-        <li><%= link_to_unless I18n.locale == :swe, "Svenska", language_swedish_path %></li>
+        <li class="navbar-text">
+          <%= t :greeting %> <!-- TESTIKENTTÄ LOKALISAATIOTA VARTEN -->
+        </li>
+        <li>
+          <%= link_to image_tag("", :class => "flag flag-gb"), language_english_path %>
+        </li>
+        <li>
+          <%= link_to image_tag("", :class => "flag flag-fi"), language_finnish_path %>
+        </li>
+        <li>
+          <%= link_to image_tag("", :class => "flag flag-se"), language_swedish_path %>
+        </li>
 	    <% if not session[:user_id].nil? %>
 			    <li><%= link_to User.find(session[:user_id]).name, User.find(session[:user_id])%></li>
 		    <li><%= link_to 'Logout', logout_path, method: :delete %></li>
