Add some locales

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,10 @@
 	    <ul class="nav navbar-nav">
 
 	      <li>
-	      	<%= link_to 'Ideas', ideas_path %>
+	      	<%= link_to (t :ideas), ideas_path %>
 	      </li>
 	      <li>
-	      	<%= link_to 'Users', users_path %>
+	      	<%= link_to (t :users), users_path %>
 	      </li>
 	    </ul>
       <ul class='nav navbar-nav navbar-right'>
