--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -5,4 +5,4 @@
 <%= render 'form' %>
 
 <!-- <%= link_to 'Back', comments_path %> -->
-<%= link_to 'Back', idea_path(:id => params[:id]) %>
+<%= link_to (t :back), idea_path(:id => params[:id]) %>
