--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', idea_path(@comment.idea) %>
+<%= link_to (t :edit), edit_comment_path(@comment) %> |
+<%= link_to (t :back), idea_path(@comment.idea) %>
 
 
