--- a/app/views/histories/edit.html.erb
+++ b/app/views/histories/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @history %> |
-<%= link_to 'Back', histories_path %>
+<%= link_to (t :show), @history %> |
+<%= link_to (t :back), histories_path %>
