--- a/app/views/ideas/edit.html.erb
+++ b/app/views/ideas/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'edit_ideas_tags' %>
 
-<%= link_to 'Show', @idea %> |
-<%= link_to 'Back', ideas_path %>
+<%= link_to (t :show), @idea %> |
+<%= link_to (t :back), ideas_path %>
