--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -76,11 +76,11 @@
                         <div class="panel-heading">
                           <% if not session[:user_id].nil? and current_user.moderator %>
                             <% if comment.visible != true %>
-                              <%= link_to 'Publish', publish_comment_path(comment), method: :publish, data: { confirm: 'Are you sure?' }, :class => "btn-sm btn-success publish_comment" %>
+                              <%= link_to (t :publish_button), publish_comment_path(comment), method: :publish, data: { confirm: (t :are_you_sure) }, :class => "btn-sm btn-success publish_comment" %>
                             <% else %>
-                              <%= link_to 'Unpublish', unpublish_comment_path(comment), method: :unpublish, data: { confirm: 'Are you sure?' }, :class => "btn-sm btn-success publish_comment" %>
+                              <%= link_to (t :unpublish_button), unpublish_comment_path(comment), method: :unpublish, data: { confirm:  (t :are_you_sure) }, :class => "btn-sm btn-success publish_comment" %>
                              <% end %>
-                            <%= link_to 'Delete', comment, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn-sm btn-danger delete_comment" %>
+                            <%= link_to (t :delete), comment, method: :delete, data: { confirm:  (t :are_you_sure) }, :class => "btn-sm btn-danger delete_comment" %>
                           <% end %>
                           <p>
                           <%= link_to comment.user.name, comment.user_id %>
@@ -115,8 +115,8 @@
 
   <p>
   <% if not session[:user_id].nil? and current_user.moderator %>
-    <%= link_to 'Edit', edit_idea_path(@idea) %> |
+    <%= link_to (t :edit), edit_idea_path(@idea) %> |
   <% end %>
-  <%= link_to 'Back to ideas', ideas_path %>
+  <%= link_to (t :ideas), ideas_path %>
   </p>
 </div>
