--- a/app/views/likes/edit.html.erb
+++ b/app/views/likes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @like %> |
-<%= link_to 'Back', likes_path %>
+<%= link_to (t :show), @like %> |
+<%= link_to (t :back), likes_path %>
