--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @tag %> |
-<%= link_to 'Back', tags_path %>
+<%= link_to (t :show), @tag %> |
+<%= link_to (t :back), tags_path %>
