--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -5,5 +5,5 @@
   <%= @tag.text %>
 </p>
 
-<%= link_to 'Edit', edit_tag_path(@tag) %> |
-<%= link_to 'Back', tags_path %>
+<%= link_to (t :edit), edit_tag_path(@tag) %> |
+<%= link_to (t :back), tags_path %>
