--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
   <h2>
-    Ideas by <%= @user.name %>
+   <%= (t :ideas_by_user) +" "+ @user.name %>
   </h2>
 </div>
 
