--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,10 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Time</th>
-      <th>Text</th>
-      <th>Idea</th>
+      <th>(t :user)</th>
+      <th>(t :user)</th>
+      <th>(t :text)</th>
+      <th>(t :idea)</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,9 +20,9 @@
         <td><%= comment.time %></td>
         <td><%= comment.text %></td>
         <td><%= comment.idea_id %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (t :show), comment %></td>
+        <td><%= link_to (t :edit), edit_comment_path(comment) %></td>
+        <td><%= link_to (t :delete), comment, method: :delete, data: { confirm: (t :are_you_sure) } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to ( (t :new) + " " + (t :comment) ) , new_comment_path %>
