--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -18,9 +18,9 @@
         <td><%= history.time %></td>
         <td><%= history.basket %></td>
         <td><%= history.user.name %></td>
-        <td><%= link_to 'Show', history %></td>
-        <td><%= link_to 'Edit', edit_history_path(history) %></td>
-        <td><%= link_to 'Destroy', history, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (t :show), history %></td>
+        <td><%= link_to (t :edit), edit_history_path(history) %></td>
+        <td><%= link_to (t :destroy), history, method: :delete, data: { confirm: (t :are_you_sure)} %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New History', new_history_path %>
+<%= link_to (t :new) + " " + (t :history) , new_history_path %>
