--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Likes</h1>
+<h1>(t :like)</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Like type</th>
-      <th>User</th>
-      <th>Idea</th>
+      <th>(t :like)</th>
+      <th>(t :user)</th>
+      <th>(t :idea)</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,9 +18,9 @@
         <td><%= like.like_type %></td>
         <td><%= like.user_id %></td>
         <td><%= like.idea_id %></td>
-        <td><%= link_to 'Show', like %></td>
-        <td><%= link_to 'Edit', edit_like_path(like) %></td>
-        <td><%= link_to 'Destroy', like, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to (t :show), like %></td>
+        <td><%= link_to (t :edit), edit_like_path(like) %></td>
+        <td><%= link_to (t :delete), like, method: :delete, data: { confirm: (t :are_you_sure) } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Like', new_like_path %>
+<%= link_to ((t :new) + " " + (t :like)), new_like_path %>
