--- a/app/views/likes/show.html.erb
+++ b/app/views/likes/show.html.erb
@@ -15,5 +15,5 @@
   <%= @like.idea_id %>
 </p>
 
-<%= link_to 'Edit', edit_like_path(@like) %> |
-<%= link_to 'Back', likes_path %>
+<%= link_to (t :edit), edit_like_path(@like) %> |
+<%= link_to (t :back), likes_path %>
