--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,9 +33,9 @@
 
   
   
-        <td><%= link_to 'Show', user %></td>        
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>        
+        <td><%= link_to (t :show), user %></td>        
+        <td><%= link_to (t :edit), edit_user_path(user) %></td>
+        <td><%= link_to (t :delete), user, method: :delete, data: { confirm: (t :are_you_sure) } %></td>        
   
 
       </tr>
@@ -45,4 +45,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to ( (t :new) + " " + (t :user)), new_user_path %>
