--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -7,7 +7,7 @@
         <%= @idea.histories.first.user.name %> - <%= @idea.histories.first.time.strftime('%d.%m.%Y %H:%M ') %>
       </p>
       <%if not @idea.tags.empty?%>
-        <p>Tags:
+        <p><%= (t :tags) %> 
           <% @idea.tags.each do |tag| %>
             <%= tag.text %>
             <% if not tag == @idea.tags.last%>
@@ -66,7 +66,7 @@
   </div>
 
   <h3>
-    Comments:
+    <%= (t :comments) %>
   </h3>
  <% @idea.comments.each do |comment| %>
 	 <% if (comment.visible? or (not current_user.nil? and current_user.moderator?)) %>
@@ -105,7 +105,7 @@
       <%= f.hidden_field :time, :value => Time.now %>
       <div method="post" action="comment/new">
         <p>
-          Comment:
+         <%= (t :comment) %>
         </p>
         <%= f.text_area :text,class: "form-control", rows: "5", id: "comment"%>
           <button type="submit" class="btn btn-primary">Send </button>
