Faq routes and show

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,9 @@
 	      <li>
 	      	<%= link_to (t :users), users_path %>
 	      </li>
+        	<li>
+	      	<%= link_to (t :faq_button), '/faq' %>
+	      </li>
 	    </ul>
       <ul class='nav navbar-nav navbar-right'>
         <li class="navbar-text">
