--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -40,9 +40,11 @@
   </div>
   <!-- End tags -->
   <!-- Show sort -->
-  <%= sort_link @q, :topic, 'Topic' %>-
+  <%= sort_link @q, :topic_case_insensitive, 'Topic' %>-
   <%= sort_link @q, :created_at %>-
-  <%= sort_link @q, :likes.length %>
+  <%= sort_link @q, :likes_count_sort do  %>
+  likes
+  <% end %>
   <!-- End sort -->
 </div>
 <!-- End top bar -->
