--- a/app/views/faqs/_form.html.erb
+++ b/app/views/faqs/_form.html.erb
@@ -11,14 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :language %>
-    <%= f.text_field :language %>
-  </div>
 
   <div class="field">
     <%= f.label :text %>
-    <%= f.text_field :text %>
+    <br>
+    <%= f.text_area :text, :size => "100x10"  %>
   </div>
 
   <div class="actions">
