--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -7,7 +7,7 @@
         <%= @idea.histories.first.user.name %> - <%= @idea.histories.first.time.strftime('%d.%m.%Y %H:%M ') %>
       </p>
       <%if not @idea.tags.empty?%>
-        <p><%= (t :tags) %>
+        <p><%= (t :tags) %> 
           <% @idea.tags.each do |tag| %>
             <%= tag.text %>
             <% if not tag == @idea.tags.last%>
@@ -25,15 +25,21 @@
 				      <span class="glyphicon glyphicon-thumbs-up"></span>
 				      <%= @idea.likes.length %>
 			      <% end %>
+			      <%= link_to @idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
+				      <span class="glyphicon glyphicon-share"></span>
+			      <% end %>	
 		      <% else %>
 			      <%= link_to unlike_idea_path(@idea), :class => 'btn btn-success', method: :post do %>
 				      <span class="glyphicon glyphicon-thumbs-up"></span>
 				      <%= @idea.likes.length %>
 			      <% end %>
+			      <%= link_to @idea, :class => 'btn btn-primary', :title => 'Show idea' do %>
+				      <span class="glyphicon glyphicon-share"></span>
+			      <% end %>
 		      <% end %>
 
 	      <% end %>
-      <%= social_share_button_tag('Hydea | ' + @idea.topic, name: 'Hydea', url: request.url, popup: 'true') %>
+      <div class="fb-share-button" data-href="<%= request.url%>" data-layout="button" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Jaa</a></div>
     </div>
   </div>
 
